# app/Config/Routes.php
@@ -31,9 +31,12 @@ $routes->setAutoRoute(true);
 
 // We get a performance increase by specifying the default
 // route since we don't have to scan directories.
+
+
 $routes->get('/', 'Home::index');
 $routes->resource('users');
-
+//Auth
+$routes->post('auth/login', '\App\Controllers\Auth\Login::login');
 
 $routes->resource('sysDepts');
 $routes->resource('sysDicts');
