# public/assets/api.yaml
@@ -1,5 +1,33 @@
 openapi: 3.0.0
 paths:
+  /auth/login:
+    post:
+      tags:
+        - 'User Login'
+      summary: 'login page to authenticate user'
+      operationId: userLogin
+      requestBody:
+        description: 'Login user'
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              properties:
+                username:
+                  type: string
+                password:
+                  type: string
+              type: object
+      responses:
+        '200':
+          description: 'Login successed'
+          content:
+            application/json:
+              schema: {  }
+            application/xml:
+              schema: {  }
+        '400':
+          description: 'Invalid username/password supplied'
   /sysDepts:
     get:
       tags:
